--- a/index.html
+++ b/index.html
@@ -3,49 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Log book</title>
-    <style type="text/css">
-      body, #textbox {
-        background-color: whitesmoke;
-        color: black;
-        /*padding: 5px;*/
-      }
-
-      #textbox, #display, #footer {
-        border-radius: 5px;
-      }
-
-      #footer {
-        background-color: black;
-        color: whitesmoke;
-        padding: 5px;
-        position: absolute;
-        bottom: 0;
-        width: 97%;
-        margin-bottom: 5px;
-      }
-
-      #person, #entry {
-        margin-left: 10px;
-      }
-
-      #entry {
-        width: 70%;
-        height: 100%;
-      }
-
-      #textbox {
-        width: 49%;
-      }
-      #display {
-        overflow-y: auto;
-        width: 48%;
-        float: right;
-        height: 400px;
-        background-color: black;
-        color: whitesmoke;
-        padding: 8px;
-      }
-    </style>
+    <link rel="stylesheet" type="text/css" href="./styles/index.css">
   </head>
   <body>
     <h1>Log book</h1>
@@ -64,6 +22,10 @@
       
     </span>
 
+    <div id="holder">
+      Drag your markdown (.md) file here
+    </div>
+
     <div id="footer">
       <form>
         <select id="type">
@@ -75,40 +37,11 @@
       </form>
     </div>
 
+    <script type="text/javascript" src="./scripts/logger.js"></script>
+
     <script>
       // You can also require other files to run in this process
       require('./renderer.js');
-      var fs = require('fs');
-      var showdown  = require('showdown');
-      var converter = new showdown.Converter();
-      var p = 'EXAMPLE.md';
-
-      function updateDiv(data) {
-        document.getElementById("display").innerHTML = converter.makeHtml(data);
-      }
-
-      function addLog(type, person, entry) {
-        data = "\n__" + type + "__ (" + person + ") - " + entry + "\n";
-        document.getElementById("textbox").value += data;
-        updateDiv(document.getElementById("textbox").value);
-      }
-
-      function appendLog(e) {
-        if(e.keyCode === 13) {
-          e.preventDefault();
-          var type = document.getElementById("type").value, 
-              person = document.getElementById("person").value,
-              entry = document.getElementById("entry").value;
-
-          addLog(type, person, entry);
-        }
-      }
-
-      fs.readFile(p, 'utf8', function (err, data) {
-        if (err) return console.log(err);
-        document.getElementById("textbox").value = data;
-        updateDiv(data);
-      });
     </script>
   </body>
 </html>
